# stm32f407_dds_i2s_dma

./: .gitignore  README.md  build.cmd  build.sh
cmake/: TOOLCHAIN_arm_none_eabi_cortex_m4.cmake
source/: CMakeLists.txt  LinkerScript.ld  STM32F407ZET6_board.cfg  STM32F407ZET6_board.xml
source/libs/: CMakeLists.txt
source/libs/CMSIS/: CMakeLists.txt  versions.txt
source/libs/CMSIS/device/: stm32f4xx.h
source/libs/STM32F4xx_StdPeriph_Driver/: CMakeLists.txt
source/libs/startup/: CMakeLists.txt  startup_stm32.s
source/src/: CMakeLists.txt  dds.c  debug_uart.c  hw_config.c  i2s_dma.c  main.c  stm32f4xx_it.c  system_stm32f4xx.c
source/src/inc/: dds.h  dds_defs.h  debug_uart.h  hw_config.h  i2s.h  platform_config.h  uart_buffer.h
